--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
+  <repositories>
+    <repository>
+      <id>osdn</id>
+      <name>osdn.jp</name>
+      <url>http://orangesignal.osdn.jp/maven2</url>
+    </repository>
+  </repositories>
   <dependencies>
     <dependency>
       <groupId>io.quarkus</groupId>
@@ -74,6 +81,11 @@
           <version>16.0.2</version>
           <scope>compile</scope>
       </dependency>
+    <dependency>
+      <groupId>jp.gr.java_conf.dangan</groupId>
+      <artifactId>jlha</artifactId>
+      <version>0.06-05</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
