--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
       <artifactId>jlha</artifactId>
       <version>0.06-05</version>
     </dependency>
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-compress</artifactId>
+          <version>1.19</version>
+      </dependency>
   </dependencies>
   <build>
     <plugins>
