--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,11 @@
           <artifactId>commons-compress</artifactId>
           <version>1.19</version>
       </dependency>
+    <dependency>
+      <groupId>moe.yo3explorer</groupId>
+      <artifactId>peParser</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
