--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-jdbc-postgresql</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-resteasy-qute</artifactId>
+    </dependency>
+
       <dependency>
           <groupId>org.jetbrains</groupId>
           <artifactId>annotations</artifactId>
